testdata/negative-tests/error_interface.go
package example

func Foo(e error) {} // ERROR built-in type
